...

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="170dp"
        android:layout_height="270dp"
...

    <TextView
        android:id="@+id/movie_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_genre_1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/movie_genre_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_genre_2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/movie_genre_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/movie_episode_img"
        app:layout_constraintEnd_toStartOf="@id/movie_rating_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/cv_genre_1" />
...
        android:gravity="start"
        android:src="@drawable/ic_baseline_local_movies_24"
        app:layout_constraintEnd_toStartOf="@id/movie_episode_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating" />
...
        android:src="@drawable/ic_baseline_attach_money_24"
        app:layout_constraintBottom_toTopOf="@id/movie_language_img"
        app:layout_constraintEnd_toStartOf="@id/movie_revenue_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating" />
...
        android:gravity="start"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintEnd_toStartOf="@id/tvShow_language_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_revenue_img" />
...
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/desc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_companies_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/img_companies_1"
                android:layout_width="120dp"
                android:layout_height="120dp"
...

            <TextView
                android:id="@+id/name_companies_txt_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/origin_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_companies_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/img_companies_2"
                android:layout_width="120dp"
                android:layout_height="120dp"
...

            <TextView
                android:id="@+id/name_companies_txt_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/origin_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
