...
            android:id="@+id/detail_content"
            layout="@layout/content_detail_show" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
...
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/sus_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_to_favorite"
        android:text="@string/add_to_favorite"
        android:textAllCaps="false"
...
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/menu_fab"
        app:layout_constraintEnd_toEndOf="@id/menu_fab" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/share_title"
        android:text="@string/share"
        android:textAllCaps="false"
...
